--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Reusable Item Exchange</string>
+    <string name="auth">Authentication</string>
+    <string name="forget_password">Forgot Password</string>
 </resources>
