--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="messages">Messages</string>
     <string name="profile">Profile</string>
     <string name="add_item">Add Item</string>
+    <string name="add_item_success">Add item Success</string>
+    <string name="more_details">More details</string>
+    <string name="item_details">Item details</string>
+    <string name="liked_items">Liked items</string>
 </resources>
